# ethzasl_xsens_driver

./: .gitignore  AUTHORS  CHANGELOG.rst  CMakeLists.txt  README  mainpage.dox  package.xml  setup.cfg  setup.py  stack.xml
config/: xsens_urdf_check.rviz
ethzasl_xsens_driver_ros2/: mtdef.py  mtdevice.py  mtnode.py
launch/: xsens_driver.launch  xsens_driver.launch.xml  xsens_driver_launch.xml  xsens_urdf_check.launch
nodes/: get_calib_data.py  mtdef.py  mtdevice.py  mtnode.py  mtnode_new.py
nodes/xsens_driver/: _mtdevice.py  _mtnode.py  mtdef.py
src/xsens_driver/: mtdevice.py
urdf/: xsens_mti.urdf.xacro  xsens_mti_example.urdf
xsens_driver/: mainpage.dox  manifest.xml  mtdevice.py  mtnode.py
xsens_driver/launch/: xsens_driver.launch
xsens_driver/nodes/: mtdef.py  mtdevice.py  mtnode.py  mtnode_new.py
