<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethzasl_xsens_driver_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 Driver for XSens MT/MTi/MTi-G devices.</description>
  <maintainer email="dominic.baril@norlab.ulaval.ca">Dominic Baril</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>python-serial</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
